--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "tslib": "^2.0.0",
     "zone.js": "~0.15.1"
   },
+  "resolutions": {
+    "tar": ">=7.5.7",
+    "ajv": ">=8.18.0"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.20",
     "@angular-eslint/builder": "19.8.1",
